# DeploymentService

./: .gitignore  CMakeLists.txt  config.json
cli/: CommandLineClient.cpp
cmake/: FindOrInstallOpenSSL.cmake  conan.cmake
sda/: CommunicationManager.cpp  CommunicationManager.h  Config.cpp  Config.h  LocalVersionManager.cpp  LocalVersionManager.h  SdaException.h  SystemInfo.cpp  SystemInfo.h  UpdateService.cpp  UpdateService.h  Utils.cpp  Utils.h
